--- a/client/src/Containers/Covid/Covid.scss
+++ b/client/src/Containers/Covid/Covid.scss
@@ -1,5 +1,6 @@
 .diagram {
-   background: rgba(255, 255, 255, 0.6);
+   // background: rgba(255, 255, 255, 0.6);
+   background: linear-gradient(45deg, rgba(255, 255, 255, 0.6), rgba(162, 162, 162, 0.6));
    box-shadow: 0 0 15px 10px rgba(0, 0, 0, 0.1);
    width: 60%;
    min-width: 450px;
@@ -16,7 +17,7 @@
 
    @media (hover: hover) and (pointer: fine) and (min-width: 600px) {
       &:hover {
-         transform: scale(1.05);
+         transform: scale(1.02);
       }
    }
    .loading {
@@ -26,6 +27,20 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
+   }
+}
+
+section {
+   animation: load-in 0.8s ease-in-out;
+
+   @keyframes load-in {
+      from {
+         transform: translateY(25%);
+         opacity: 0;
+      } to {
+         transform: translateY(0%);
+         opacity: 1;
+      }
    }
 }
 
