--- a/client/src/Containers/Covid/Covid.css
+++ b/client/src/Containers/Covid/Covid.css
@@ -1,5 +1,5 @@
 .diagram {
-  background: linear-gradient(45deg, rgba(255, 255, 255, 0.8), rgba(162, 162, 162, 0.8));
+  background: linear-gradient(45deg, #ba9595, #872d28);
   box-shadow: 0 0 15px 10px rgba(0, 0, 0, 0.1);
   width: 60%;
   min-width: 450px;
@@ -44,6 +44,7 @@ section {
 @media only screen and (max-width: 600px) {
   .diagram {
     width: 85%;
+    height: 300px;
     min-width: unset;
   }
 }
