--- a/client/src/Containers/Covid/Covid.scss
+++ b/client/src/Containers/Covid/Covid.scss
@@ -1,6 +1,10 @@
 .diagram {
    // background: rgba(255, 255, 255, 0.6);
-   background: linear-gradient(45deg, rgba(255, 255, 255, 0.8), rgba(162, 162, 162, 0.8));
+   // background: linear-gradient(45deg, rgba(255, 255, 255, 0.8), rgba(125, 125, 125, 0.8));
+   // background: linear-gradient(45deg, rgb(206 206 206), rgb(154 130 130));
+   // background: linear-gradient(45deg, rgb(195 193 193), rgb(134 75 71));
+   background: linear-gradient(45deg, #ba9595, #872d28);
+   // background: linear-gradient(45deg, #ab2a2a, #540e0e);
    box-shadow: 0 0 15px 10px rgba(0, 0, 0, 0.1);
    width: 60%;
    min-width: 450px;
@@ -47,6 +51,7 @@ section {
 @media only screen and (max-width: 600px) {
    .diagram {
       width: 85%;
+      height: 300px;
       min-width: unset;
    }
 }
